--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "react-select": "^5.7.2",
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
